force-app/main/default/objects/Exclusives_Enquiry__c/Exclusives_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Exclusives Enquiry</label>
    <nameField>
        <displayFormat>Exclusives Enquiry-{00000}</displayFormat>
        <label>Exclusives Enquiry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exclusives Enquiries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>