force-app/main/default/objects/Exclusives_Enquiry__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <inlineHelpText>Please enter any additional information to assist with this enquiry.</inlineHelpText>
    <label>Additional Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>