force-app/main/default/objects/Exclusives_Enquiry__c/fields/Dates_are_Flexible__c.field-meta.xml
<CustomField>
    <fullName>Dates_are_Flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ie. approx. 3 days either side.
Please tick this box if the passenger is flexible with their departure/return dates.</inlineHelpText>
    <label>Dates are Flexible</label>
    <type>Checkbox</type>
</CustomField>