force-app/main/default/objects/Exclusives_Enquiry__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <label>Departure Date</label>
    <type>Date</type>
</CustomField>