force-app/main/default/objects/Exclusives_Enquiry__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>Main_Contact__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>