force-app/main/default/objects/Exclusives_Enquiry__c/fields/Interested_in_Current_Deal__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Current_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Is there an existing deal that the passenger is interested in? If so please enter the deal ID (4-digit number).</inlineHelpText>
    <label>Interested in Current Deal?</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Exclusives Enquiries</relationshipLabel>
    <relationshipName>Exclusives_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>