force-app/main/default/objects/Exclusives_Enquiry__c/fields/Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exclusives Enquiries</relationshipLabel>
    <relationshipName>Exclusives_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>