force-app/main/default/objects/Exclusives_Enquiry__c/fields/Notification_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Email Sent</label>
    <type>Checkbox</type>
</CustomField>