force-app/main/default/objects/Exclusives_Enquiry__c/fields/Number_of_Travellers_Infants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Travellers_Infants__c</fullName>
    <label>Number of Travellers - Infants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>