force-app/main/default/objects/Exclusives_Enquiry__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>IF(
NOT(ISBLANK( Main_Contact__r.PersonContact.MobilePhone )),
Main_Contact__r.PersonContact.MobilePhone,
Main_Contact__r.Phone
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>