force-app/main/default/objects/Exclusives_Enquiry__c/fields/TAD_Order__c.field-meta.xml
<CustomField>
    <fullName>TAD_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please link to existing order if applicable</inlineHelpText>
    <label>TAD Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Exclusives Enquiries</relationshipLabel>
    <relationshipName>Exclusives_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>