force-app/main/default/objects/Exclusives_Enquiry__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <label>Travel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-guided/ Independent Travel</fullName>
            </value>
            <value>
                <fullName>Guided Tour</fullName>
            </value>
            <value>
                <fullName>Private Tour Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>