force-app/main/default/objects/Exclusives_Enquiry__c/validationRules/Return_Date_must_be_later_than_Dep_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_must_be_later_than_Dep_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Departure_Date__c &gt; Return_Date__c</errorConditionFormula>
    <errorDisplayField>Return_Date__c</errorDisplayField>
    <errorMessage>Return Date must be later than Departure Date</errorMessage>
</ValidationRule>