force-app/main/default/objects/Exclusives_Enquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enquiry_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>